--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@privy-io/react-auth": "^1.95.3",
     "@tanstack/react-query": "^5.62.2",
     "@zerodev/ecdsa-validator": "^5.4.0",
+    "@zerodev/permissions": "^5.5.0",
     "@zerodev/sdk": "^5.4.1",
+    "@zerodev/webauthn-key": "^5.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.21.53"
